PW-6570 and PW-6953 - Refactored webhook handler code and defined constants for package names and package versions for app info (#7)
* PW-6570 and PW-6953

* Fixing Review Comments from Vandana

--- a/adyen-appexchange/main/default/classes/AdyenAsyncAdapterTest.cls
+++ b/adyen-appexchange/main/default/classes/AdyenAsyncAdapterTest.cls
@@ -228,7 +228,7 @@ global class AdyenAsyncAdapterTest {
             'live' => false,
             'notificationItems' => new List<AdyenService.NotificationItems>{item}
         };
-        AdyenPaymentHelper.TEST_NOTIFICATION_REQUEST_BODY = JSON.serialize(requestBody);
+        AdyenWebhookNotificationHelper.TEST_NOTIFICATION_REQUEST_BODY = JSON.serialize(requestBody);
 
         Test.startTest();
         CommercePayments.GatewayNotificationResponse captureResponse = adyenAdapter.processNotification(null);
