Commit test, for a PR to test sonar cloud scanner.

--- a/adyen-appexchange/force-app/main/default/classes/AdyenAsyncAdapter.cls
+++ b/adyen-appexchange/force-app/main/default/classes/AdyenAsyncAdapter.cls
@@ -43,5 +43,7 @@ global with sharing class AdyenAsyncAdapter implements CommercePayments.PaymentG
         return AdyenWebhookNotificationHelper.handleAsyncNotificationCallback(gatewayNotificationContext, apexName);
     }
 
-    public class GatewayException extends Exception {}
+    public class GatewayException extends Exception {
+
+    }
 }
